--- a/PlanteBytte01/wwwroot/index.html
+++ b/PlanteBytte01/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="PlanteBytte01.styles.css" rel="stylesheet" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5050099913800339"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
